--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+
 <head>
   <meta charset="utf-8">
   <title>Lustys Portfolio</title>
@@ -7,12 +7,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Orbitron:wght@500&family=Spartan:wght@100;300;600&family=Catamaran:wght@400;500&family=Lato:wght@400;900&display=swap"rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Lobster&family=Orbitron:wght@500&family=Spartan:wght@100;300;600&family=Catamaran:wght@400;500&family=Lato:wght@400;900&display=swap"
+    rel="stylesheet">
   <script src="https://kit.fontawesome.com/5c3cdf72ae.js" crossorigin="anonymous"></script>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
+
 <body class="mat-typography lustys-mat-theme">
-  
+
   <app-root></app-root>
 </body>
+
 </html>
