--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,11 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Lustys Portfolio</title>
+  <title>Lusty9 | Online Portfolio</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="The official online portfolio of product designer Lusty9.">
+  <meta name="keywords" content="product design, UI/UX, UI design, Web design, Web developer, Online portfolio">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link
